Added Edit Device dialog
